# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
data/: database.sqlite
dokumentaatio/: alustava_maarittelydokumentti.md  arkkitehtuuri.md  kayttoohje.md  testausdokumentti.md  tuntikirjanpito.md  vaatimusmaarittely.md
htmlcov/: index.html  src_index_py.html  src_ui_block_py.html  src_ui_gameloop_py.html  status.json
laskarit/: alustava_maarittelydokumentti
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py  maksukortti_test.py.save
laskarit/viikko2/unicafe/: .coverage  tasks.py
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
src/: build.py  config.py  index.py  initialize_database.py
src/entities/: block.py  clock.py  field.py
src/repositories/: score_repository.py
src/repository/: score_repository.py
src/services/: block_setter.py  clock.py  game.py  gameloop.py
src/tests/: block_test.py  field_test.py  gameloop_test.py  index_test.py  score_repository_test.py
src/tests/entities/: block_test.py
src/tests/services/: gameloop_test.py
src/ui/: block.py  control_options_view.py  event_handler.py  event_queue.py  game.py  game_rules_view.py  game_view.py  gameloop.py  high_scores_view.py  new_score_view.py  ranking_view.py  renderer.py  start_screen_view.py
tetris/dokumentaatio/: tuntikirjanpito.md
(+3 files in other folders)
