[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Akihiro Tanaka <akihiro.fin@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
invoke = "^1.5.0"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
