[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Akihiro Tanaka <akihiro.fin@icloud.com>"]

[tool.poetry.dependencies]
python = "^2.7"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
